--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -81,7 +81,53 @@
         
         <div class="hero-unit" id="forum">
             <h3>Forum</h3>
-            <a href="{% url 'board' 'resource' resource.id %}">Link2Forum</a>
+            
+            {% if threads %}
+                <div class="row panel-body">
+                    <div class="table-responsive" style="margin-left:0px">
+                        <table id="threadTable" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                            <thead>
+                                <tr>
+                                    <th>Thread Name</th>
+                                    <th>Type</th>
+                                    <th>Posted By</th>
+                                    <th>Replies</th>
+                                    <th>Last Post</th>
+                                    <th>Created At</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                            {% for thread in threads %}
+                                {% if thread.restricted <= request.user.teacher.verified %}
+                                <tr>
+                                    <td><a href="{% url 'thread' 'resource' resource.id thread.id %}">{{ thread.title }}</a></td>
+                                    {% if thread.threadtype == '0' %}
+                                    <td>Rating</td>
+                                    {% elif thread.threadtype == '1' %}
+                                    <td>Question</td>
+                                    {% elif thread.threadtype == '2' %}
+                                    <td>Discussion</td>
+                                    {% else %}
+                                    <td>No type!</td>
+                                    {% endif %}
+                                    <td>{{ thread.author }}</td>
+                                    <td>{{ thread.num_posts }}</td>
+                                    <td>{{ thread.last_post }}</td>
+                                    <td>{{ thread.datetime }}</td>
+                                </tr>
+                                {% endif %}
+                            {% endfor %}
+                            </tbody>
+                         </table>
+                    </div>
+                </div> <!-- close panel -->
+    
+            {% else %}
+                <h4>No Threads on this board</h4>
+            {% endif %}
+            
+            <a class="btn btn-primary" href="{% url 'board' 'resource' resource.id %}">See all Threads</a>
+            <a class="btn btn-primary pull-right" href="{% url 'new_thread' 'resource' resource.id %}">Create a Thread</a>
         </div>
         
         <div class="hero-unit" id="pack">
